--- a/Scraper.API/Scraper.API.csproj
+++ b/Scraper.API/Scraper.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -14,7 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Scraper.Application\Scraper.Application.csproj" />
     <ProjectReference Include="..\Scraper.Domain\Scraper.Domain.csproj" />
+    <ProjectReference Include="..\Scraper.Infrastructure\Scraper.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
