--- a/Scraper.Application/Scraper.Application.csproj
+++ b/Scraper.Application/Scraper.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+    <PackageReference Include="SharpGrip.FluentValidation.AutoValidation.Mvc" Version="1.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Scraper.Domain\Scraper.Domain.csproj" />
   </ItemGroup>
 
