Add write and read DbContexts, initial EF migration done

--- a/Scraper.API/appsettings.Development.json
+++ b/Scraper.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Scraper": "Server=localhost;Port=5432;Database=scraper;User Id=postgres;Password=postgres;"
   }
 }
